--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
 ]
 
 [tool.ruff]
-line-length = 120
+line-length = 119
 
-[tool.ruff.lint]
-extend-select = ["E501"]
+[tool.ruff.format]
+docstring-code-format = true
