--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "python-dateutil>=2.9.0.post0",
     "ruff>=0.7.3",
+    "tabulate>=0.9.0",
     "tqdm>=4.67.0",
 ]
 
