--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "python-dateutil>=2.9.0.post0",
-    "ruff>=0.7.3",
     "tabulate>=0.9.0",
     "tqdm>=4.67.0",
 ]
@@ -16,3 +15,14 @@ line-length = 119
 
 [tool.ruff.format]
 docstring-code-format = true
+
+[dependency-groups]
+dev = [
+    "pytest-cov>=6.0.0",
+    "pytest>=8.3.3",
+    "ruff>=0.7.4",
+]
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+testpaths = ["tests",]
