--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,8 @@ jobs:
             uv-${{ runner.os }}
       - name: Install dependencies
         run: uv sync --all-extras --dev --frozen
+      - name: Check format
+        run: ./format.sh check
       - name: Test with pytest
         run: uv run pytest --cov=src
       - name: Minimize uv cache
