--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 # reference: https://github.com/smarlhens/python-boilerplate/blob/main/.github/workflows/pr.yml
-name: ci
+name: CI
 
 on:
   pull_request:
